==================================================
Commit Hash: 0cebe712376fb132c1f49954f8916f3f9b71283d
Author: Niwatori401
Date: Tue Sep 26 10:14:08 2023

Update perk icons
Update various sprites
Update localization to reflect perk rebalances

==================================================
Commit Hash: 928521e4072a1b29ade40922cdec5e3bc800bc38
Author: Niwatori401
Date: Mon Sep 25 21:52:12 2023

Add race entries for Ursine races

==================================================
Commit Hash: 657d67622c559c189710bf51bd1495629a34f6bd
Author: Niwatori401
Date: Mon Sep 25 11:04:41 2023

Update stats for the following:
* Gluttonium price
* Zenith orb effectiveness and build cost
* Gluttonium fabricator build cost
* Crammed Croissant
* Mechanite Muffin
* Packed Pizza
* La Bombe
* Alpha Ball
* Omega Ball
* Ultratech cooking module
* Experimental belittler
* Flab grenades
* Novatech gloves
* Novatech collar
* Novatech jumpsuit
* Novatech proto-suit
* Novatech belt
* Novatech hyperbelt
* Small food storage vat
* Feeding tube storage
* Massive feeding tube storage
* Food processor
* Nutrient distillery
* XL hopper
* Feeding tube valve
* Food pipe
* Automatic food dispenser
* Advanced automatic food dispenser

==================================================
Commit Hash: 1b6a614e08523c8d1d6ca6246c8cd57c2b83c1c4
Author: Niwatori401
Date: Mon Sep 25 09:47:39 2023

Update perks with the following changes:
* Titanic Tank - Raise weight requirement to Corpulent.
* Bulletproof - Blob-Lower weight requirement to Lardy I.
* Fat Furnace - Lower weight requirement to Titanic I.
* Rotund Regeneration - Lower weight requirement to Obese.
* Paunch Power - Lower weight requirement from Gelatinous 7 to Gelatinous 4.
* Giga Gurgling - Reduce number of purchasable levels from 6 to 5.
* Well Insulated - Increase point cost from 3 to 5. Reduce levels from 5 to 4.

==================================================
Commit Hash: 698ba887bb5da47852814867cfe3acca9baad58d
Author: Niwatori401