@@ -256,7 +256,7 @@
 	<RR_Desc_F_Corpulent>Tempted by the more frequent growls and grumbles of an increasingly peckish stomach, {0} has let themselves go in many ways, but none more evident than their size. The extra meals and sedentary activities have left them with a bloated form that wobbles quite ferociously when they summon the strength to run- which isn't terribly often these days. A double chin sits plain as day on their face, daring itself to multiply. A pair of melon sized breasts sit on the now well-established upper shelf of their slowly expanding waistline, and their hips have become a slightly problematic inconvenience, their quite sizable bottom often spilling over the edges of chairs, the sound of creaks and snapping growing ever-present. Their thighs boast an impressive thickness, pushing into each other deeply even while upright, and has made walking for {0} a more difficult task indeed. Regular meals don't seem to cut it for them, and they find themselves consuming a fair bit more than they would have expected themselves to be capable of.</RR_Desc_F_Corpulent>
 	<RR_Desc_F_Fat>There's no denying it anymore- {0} is fat. No amount of excuses or damage control can soften the fact that they are much softer than most. An extra meal here, a second helping there, and seemingly much more often than before, {0} finds themselves sat on their increasingly larger behind,  helping themselves to the spoils of their labor- a frankly unbalanced trade, all things considered. With breasts almost the size of their head, a stomach with developing folds and hips that find themselves very nearly brushing against doorways, {0} is most content whiling their hours away sat at a desk or in bed, since moving is becoming rather troublesome- {0} can only manage a light jog at best, and the hypnotic wobbling of their many folds only comes to a stop some time after they do. And is it just them, or are their arms getting a bit heavier to lift, too?</RR_Desc_F_Fat>
 	<RR_Desc_F_Obese>{0} isn't really the particularly active type- a fact not so surprising when you take into account their quite considerable bulk. Their body is lined with thick, swaying fat deep enough to push an entire fist into their stomach, and their breasts are each as large as exceedingly ripe watermelons, resting pendulously on their impressive belly, which hangs almost to {0}'s exceedingly thick thighs. Moving isn't just a chore anymore- it requires a great deal of [Pawn's] strength just to stay upright, a task which is rarely accomplished, as they can do little more than lounge on their expansive rear, adding more chins to the two that line their bloated face. Arms as thick as a thinner person's waist are pushed higher onto the shelf of {0}'s torso by sheer mass alone, affording them only a slow, comedic waddle at best, and a pitiful flail amongst their growing body at worst. {0} is always hungry, and despite their significant food intake, it's often not enough to satisfy. Chairs break and door frames creak as {0} goes about their business, and other colonists find themselves much closer to them than they planned for...</RR_Desc_F_Obese>
-	<RR_Desc_F_MorbidlyObese>Struggling immensely to remain mobile, {0} can barely haul their magnificent bulk upright long enough to cross their bedroom, let alone long-distance journeys. A trio of chins flows into a chest proudly displaying globular breasts of huge proportion, indeed, custom-made brassieres would still struggle to fit cleanly around their hefty bosom, as do most clothes {0} tries to wear. Heaving a stomach reminiscent of an exercise ball perpetually on their frame, {0}'s body is quickly losing form, their limbs still recognisable in the ever-expanding expanse of fat, but evidently not for long. Thighs as thick as small tree trunks support an extensively pillowy ass that no longer fits through any single door, and {0} can no longer the last time they went more than an hour without some form of substantial meal. Hunger spikes again and again, each more intense than the last, and their ravenous urges never quite seem to fully subside.</RR_Desc_F_MorbidlyObese>
+	<RR_Desc_F_MorbidlyObese>Struggling immensely to remain mobile, {0} can barely haul their magnificent bulk upright long enough to cross their bedroom, let alone long-distance journeys. A trio of chins flows into a chest proudly displaying globular breasts of huge proportion, indeed, custom-made brassieres would still struggle to fit cleanly around their hefty bosom, as do most clothes {0} tries to wear. Heaving a stomach reminiscent of an exercise ball perpetually on their frame, {0}'s body is quickly losing form, their limbs still recognisable in the ever-expanding expanse of fat, but evidently not for long. Thighs as thick as small tree trunks support an extensively pillowy ass that no longer fits through any single door, and {0} can no longer recall the last time they went more than an hour without some form of substantial meal. Hunger spikes again and again, each more intense than the last, and their ravenous urges never quite seem to fully subside.</RR_Desc_F_MorbidlyObese>
 	<RR_Desc_F_Lardy>Confined almost entirely to a bed of clearly exceptional durability, {0} has found that their body is quickly becoming a prison of their own design.  Mustering all of their strength allows them to stumble forward at an agonizing crawl, knocking various objects over and breaking furniture almost immediately. Breasts each the size of overinflated beach balls hang precariously over a stomach that extends several feet in all directions,  and {0} sits upon a derriere so disastrously oversized that it could easily enroach most of a two-seater couch. {0} eats almost perpetually, only stopping for long enough to lounge around and perform only the most sedentary of tasks. The hunger remains always, and it only seems to get worse the more {0} eats...</RR_Desc_F_Lardy>
 	<RR_Desc_F_Lardy2>Flailing weakly, {0} lacks the strength without the means of bionic assistance to fully steer their truly splendid mass of a body anywhere outside of their room. Their several chins accompany a face recklessly saturated with thick fat, and their field of view is obscured somewhat by their expanding chest, and their gargantuan stomach, rising even higher than that, extends far enough to spill out of their bed.  If {0} could stand, their stomach would clearly reach the floor with ease,  and their rear is a close contender, dragging low enough to scrape the ground when upright, and large enough to elevate them several inches while bedridden. Tailoring fabric to fit them would be a huge waste of time, not least because they would clearly outgrow it rather swiftly, but also due to the sheer amount that would no doubt be needed to cover such a large form.  Dozens of meals disappear into {0}'s seemingly bottomless belly every few hours, and it is one mere step in an endless quest to satiate what is evidently a fruitless endeavour. </RR_Desc_F_Lardy2>
 	<RR_Desc_F_Enormous>{0} is, quite frankly, massive. Completely incapable of doing anything even remotely productive, they spend their time only eating, and growing even more exceptionally overbloated. {0} has become large enough that their rear has lifted them off the ground almost a full foot, which has prevented their legs from reaching the ground amongst the several foot wide confinement of encapsulating blubber that is their entire being. {0} eats enough food to feed a large family for several days in such short intervals that the colony will have to adjust accordingly just to maintain their exceptional girth. It is no exaggeration that they are one of the fattest individuals on the planet, but the encompassing hunger {0} feels ensures that they won't be stopping anytime soon...</RR_Desc_F_Enormous>
@@ -286,7 +286,7 @@
 	<RR_Desc_M_Corpulent>Tempted by the more frequent growls and grumbles of an increasingly peckish stomach, {0} has let themselves go in many ways, but none more evident than their size. The extra meals and sedentary activities have left them with a bloated form that wobbles quite ferociously when they summon the strength to run- which isn't terribly often these days. A double chin sits plain as day on their face, daring itself to multiply. Thick pudge dots their entire body, their significant stomach protruding quite substantially outwards, and their hips have become a slightly problematic inconvenience, their quite sizable bottom often spilling over the edges of chairs, the sound of creaks and snapping growing ever-present. Their thighs boast an impressive thickness, pushing into each other deeply even while upright, and has made walking for {0} a more difficult task indeed. Regular meals don't seem to cut it for them, and they find themselves consuming a fair bit more than they would have expected themselves to be capable of.</RR_Desc_M_Corpulent>
 	<RR_Desc_M_Fat>There's no denying it anymore- {0} is fat. No amount of excuses or damage control can soften the fact that they are much softer than most. An extra meal here, a second helping there, and seemingly much more often than before, {0} finds themselves sat on their increasingly larger behind,  helping themselves to the spoils of their labor- a frankly unbalanced trade, all things considered, with a bulging midsection thick with ample rolls, a stomach with developing folds and hopelessly ill-equipped hips that find themselves very nearly brushing against doorways, {0} is most content whiling their hours away sat at a desk or in bed, since moving is becoming rather troublesome- {0} can only manage a light jog at best, and the hypnotic wobbling of their many folds only comes to a stop some time after they do. And is it just them, or are their arms getting a bit heavier to lift, too?</RR_Desc_M_Fat>
 	<RR_Desc_M_Obese>{0} looks as though they've been enjoying a fair few additional meals - a fact not so surprising when you take into account their quite considerable bulk. Their body is lined with thick, swaying fat deep enough to push an entire fist into their stomach, and despite being male, has enough volume in the chest area to have developed soft moobs, resting somewhat unequally on their barrel-like belly, which hangs almost to {0}'s exceedingly thick thighs. Moving isn't just a chore anymore- it requires a great deal of {0}'s strength just to stay upright, a task which is rarely accomplished, with their weak, uproariously fleshed back pulling most of the payload itself, as they can do little more than lounge on their expansive rear, adding more chins to the two that line their bloated face. Arms as thick as a thinner person's waist are pushed higher onto the shelf of {0}'s torso by sheer mass alone, affording them only a slow, comedic waddle at best, and a pitiful flail amongst their growing body at worst. {0} is always hungry, and despite their significant food intake, it's often not enough to satisfy. Chairs break and door frames creak as {0} goes about their business, and other colonists find themselves much closer to them than they planned for...</RR_Desc_M_Obese>
-	<RR_Desc_M_MorbidlyObese>Struggling immensely to remain mobile, {0} can barely haul their magnificent bulk upright long enough to cross their bedroom, let alone long-distance journeys. A trio of chins flows into a heavy-set neck and chest rich with flab and folds alike. Heaving a stomach reminiscent of an exercise ball perpetually on their frame, {0}'s body is quickly losing form, their limbs still recognisable in the ever-expanding expanse of fat, but evidently not for long. Thighs as thick as small tree trunks support an extensively pillowy ass that no longer fits through any single door, and {0} can no longer the last time they went more than an hour without some form of substantial meal. Hunger spikes again and again, each more intense than the last, and their ravenous urges never quite seem to fully subside.</RR_Desc_M_MorbidlyObese>
+	<RR_Desc_M_MorbidlyObese>Struggling immensely to remain mobile, {0} can barely haul their magnificent bulk upright long enough to cross their bedroom, let alone long-distance journeys. A trio of chins flows into a heavy-set neck and chest rich with flab and folds alike. Heaving a stomach reminiscent of an exercise ball perpetually on their frame, {0}'s body is quickly losing form, their limbs still recognisable in the ever-expanding expanse of fat, but evidently not for long. Thighs as thick as small tree trunks support an extensively pillowy ass that no longer fits through any single door, and {0} can no longer recall the last time they went more than an hour without some form of substantial meal. Hunger spikes again and again, each more intense than the last, and their ravenous urges never quite seem to fully subside.</RR_Desc_M_MorbidlyObese>
 	<RR_Desc_M_Lardy>Confined almost entirely to a bed of exceptional build quality, {0} has found that their body is quickly becoming a prison of their own design.  Mustering all of their strength allows them to stumble forward at an agonizing crawl, knocking various objects over and breaking furniture almost immediately. Their pathetically overworked and consistently harassed back can just barely support a stomach that extends several feet in all directions, under intense duress from Pawn's lack of musculature and definition under their thick layer of fat, and {0} sits upon a derriere so disastrously oversized that it could easily enroach most of a two-seater couch. {0} eats almost perpetually, only stopping for long enough to lounge around and perform only the most sedentary of tasks. The hunger remains always, and it only seems to get worse the more {0} eats...</RR_Desc_M_Lardy>
 	<RR_Desc_M_Lardy2>Flailing weakly, {0} lacks the strength to fully steer their truly splendid mass of a body anywhere outside of their room. Their several chins accompany a face recklessly saturated with thick fat, and their field of view is obscured somewhat by their expanding barrel of a chest, and their gargantuan stomach, rising even higher than that, extends far enough to spill out of their bed.  If {0} could stand, their stomach would clearly reach the floor with ease,  and their rear is a close contender, dragging low enough to scrape the ground when upright, and large enough to elevate them several inches while bedridden. Tailoring fabric to fit them would be a huge waste of time, not least because they would clearly outgrow it rather swiftly, but also due to the sheer amount that would no doubt be needed to cover such a large form.  Dozens of meals disappear into {0}'s seemingly bottomless belly every few hours, and it is one mere step in an endless quest to satiate what is evidently a fruitless endeavour. </RR_Desc_M_Lardy2>
 	<RR_Desc_M_Enormous>{0} is, quite frankly, massive. Completely incapable of doing anything even remotely productive, they spend their time only eating, and growing even more exceptionally overbloated. Even amongst extremely obese individuals, {0} would be considered part of the upper echelon of corpulence, this is given prominence by their ponderous stomach that droops dangerously onto the ground. {0} has become large enough that their rear has lifted them off the ground almost a full foot, which has prevented their legs from reaching the ground amongst the several foot wide confinement of encapsulating blubber that is their entire being. {0} eats enough food to feed a large family for several days in such short intervals that the colony will have to adjust accordingly just to maintain their exceptional girth. It is no exaggeration that they are one of the fattest individuals on the planet, but the encompassing hunger {0} feels ensures that they won't be stopping anytime soon...</RR_Desc_M_Enormous>
@@ -418,7 +418,7 @@
 	<RR_Breakneck_Buffet_Desc>+25% eating speed per level\n\n"{0} doesn't even chew their food anymore. As meal upon meal vanishes down their endless gullet, they devour food with implausible dexterity given their size."\n\nPrerequisite: Demonic Devourment Level 5, Lardy II or higher</RR_Breakneck_Buffet_Desc>
 	<RR_FoldsOfHeaven_Desc>+20% rest effectiveness from sleeping on this pawn. Must toggle blob bed on and off to get effect.\n\n"It's like sinking into a water bed. Silky smooth, and yet so soft and malleable...{0}'s body might just be the most comfortable bed in the galaxy."\n\nPrerequisite: Must be a blob bed</RR_FoldsOfHeaven_Desc>
 	<RR_Beautiful_Bulk_Desc>+1.0 beauty to pawn\n\n"So hypnotic. So magnificent... the expanse of vast folds and perfect curves...{0} is so elegant that even others are transfixed by her appearance."\n\nPrerequisite: Lardy II or higher</RR_Beautiful_Bulk_Desc>
-	<RR_Fat_Furnace_Desc>Pawn radiates a small amount of heat. Level 1 is equal to a torch lamp, Level 2 is as effective as a heater. Must toggle on and off to get effect of upgrade.\n\n"{0} is so obscenely large that their sheer mass radiates a fuzzy, warm energy. Who needs central heating when you have {0}"\n\nPrerequisite: Titanic I or higher</RR_Fat_Furnace_Desc>
+	<RR_Fat_Furnace_Desc>Pawn radiates a small amount of heat. Level 1 is equal to a torch lamp, Level 2 is as effective as a heater. Must toggle on and off to get effect of upgrade.\n\n"{0} is so obscenely large that their sheer mass radiates a fuzzy, warm energy. Who needs central heating when you have {0}?"\n\nPrerequisite: Titanic I or higher</RR_Fat_Furnace_Desc>
 	<RR_RotundRegeneration_Desc>+50% healing factor\n\n"{0} is large enough that their body can metabolise in order to heal itself much faster than average."\n\nPrerequisite: Obese or larger</RR_RotundRegeneration_Desc>
 	<RR_WeLikeToParty_Desc>Pawns can use blob bed as a recreation spot. Gives dexterity play at 150% power.\n\n"It's like silly putty!"\n\nPrerequisite: Must be a blob bed</RR_WeLikeToParty_Desc>
 	<RR_GluttonyIncarnate_Desc>+100% hunger rate\n\n"It's never enough. {0} just can't help it. Every fibre of their being, every second of their consciousness harbours an unbearable desire to eat.  They cannot stop. They will not stop. Their stomach screams for more, and they are helpless to resist."\n\nPrerequisite: Voracious Level 3</RR_GluttonyIncarnate_Desc>
