@@ -1,5 +1,13 @@
 ==================================================
-Commit Hash: 0cebe712376fb132c1f49954f8916f3f9b71283d
+Commit Hash: feb046b02bfcb4aa5d7c034559213fd64c7aad14
+Author: Niwatori401
+Date: Tue Sep 26 11:53:40 2023
+
+Fix typos
+Rename enbiggener -> embiggener
+
+==================================================
+Commit Hash: 228343d05282835bb05315d0f98570cc8ba51e4a
 Author: Niwatori401
 Date: Tue Sep 26 10:14:08 2023
 
